# Backstream

./: .gitignore  CMakeLists.txt  README.md  build-quick.bat  build.ps1  build.sh  install-path.ps1
include/: backup.h  config.h  progress.h  utils.h
src/: backup.cpp  config.cpp  main.cpp  progress.cpp  utils.cpp
tools/: LICENSE_ZSTD.txt
